# sd-imbalance

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README  README.md  TODOs.md  data.py  data_utils.py  docker-compose.yml  extract_images.py  generated.dvc  model.py  notes_and_ideas.md  pyproject.toml  requirements.txt  results.md  run_multiple.sh  train.py  utils.py
.github/workflows/: ruff.yml  tests.yml
config/: config.yaml
configs/: augmentation.yaml  dataset.yaml  default.yaml  model.yaml
docs/: conf.py  index.rst  modules.rst
notebooks/: SDXL_Dreambooth_LoRA_advanced_example.ipynb  analysis.ipynb  cat_generation.ipynb  empty_jsonl.py  generate_from_lora.py  train_dreambooth_lora_sdxl_advanced.py  train_lora_flux.py
notebooks/cifar10cats/: README.md
notebooks/cifar10cats-clean/: README.md
scripts/: README.md  cats.py  comparison.py  convert_to_32.py  cyclegan_script.py  extract_images.py  flux_redux_augment.py  generate_cats.py  generate_cats_from_lora.py  generate_cats_sdxl_turbo.py  generate_cats_v1.py  generate_cifar.py  generate_flux_redux.py  generate_original_reference_from_openimages.py  original_reference.py  save_cifar_10.py  select_10p_cats_to_lora.py  show_imgs.py  test_flux.py
scripts/legacy/: generate_cats_from_lora.py
scripts/notebooks/: SDXL_Dreambooth_LoRA_advanced_example.ipynb  empty_jsonl.py
tests/: test_generated_data_configs.py  test_mocked_data_configs.py  test_training_configs.py
