[project]
name = "sd-imbalance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "bitsandbytes>=0.45.2",
    "dadaptation>=3.2",
    "datasets",
    "diffusers",
    "google-images-download>=2.8.0",
    "huggingface-hub[cli]>=0.29.1",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy<2",
    "omegaconf>=2.3.0",
    "openai-clip>=1.0.1",
    "opencv-python>=4.11.0.86",
    "openimages>=0.0.1",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "prodigyopt>=1.1.2",
    "pytest-mock>=3.14.0",
    "python-slugify>=8.0.4",
    "ruff>=0.9.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "tensorflow-cpu>=2.18.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "umap-learn>=0.5.7",
    "wandb>=0.19.5",
    "xformers>=0.0.29.post3",
]

[tool.ruff]
exclude = ["notebooks/*.ipynb"]

[tool.uv.sources]
datasets = { git = "https://github.com/huggingface/datasets.git" }
diffusers = { git = "https://github.com/huggingface/diffusers" }

[tool.pyright]
typeCheckingMode = "off"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.1.0", # You already use ruff, good to have it in dev deps
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
